# finance_evaluator

./: .gitignore  01_💻_Setup_Page.py  LICENSE  README.md  app.py  pyproject.toml  test.py
.github/workflows/: CI.yaml
data/: README.md
pages/: 02_💰_Financial_Evaluator.py
text/: financial_evaluator_text.py  setup_text.py
utils/: data_tools.py  financial_tools.py  streamlit_utils.py
