[tool.poetry]
name = "finance evaluator"
version = "0.1.0"
description = "Streamlitt app to check your own finances"
authors = ["Andre <andberna@outlook.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
isort = "^5.12.0"
streamlit = "^1.21.0"
plotly = "^5.14.1"
scikit-learn = "^1.2.2"
numpy = "^1.24.3"


[tool.poetry.group.CI.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
